# FlexWrfInput

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py
ci/: environment.yml  environment_ci.yml
flexwrfinput/: __init__.py  flexwrfinput.py
tests/: test_flexwrfinput.py
tests/file_examples/: positions
