[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | file_examples
  | LICENSE
)/
'''
[tool.isort]
profile = "black"
multi_line_output = 3

[tool.poetry]
name = "flexwrfinput"
version = "0.1.0"
description = "Tool to read, manipulate, and write input files for FLEXPART-WRF"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
donfig = "^0.7.0"
pyyaml = "^6.0"
xarray = "^2023.2.0"
netcdf4 = "^1.6.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pre-commit = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
